--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,10 @@
 				<a href="/#/profile" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Profile</a>
 			</li>
 			<li class="nav-item">
-				<a href="/#/tournaments" class="hidden-xs hidden-sm">Tournaments</a>
+				<a href="/#/tournaments" class="hidden-xs hidden-sm">
+                    Tournaments
+                    <span class="count">{{newTournamentCount}}</span>
+                </a>
 				<a href="/#/tournaments" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Tournament</a>
 			</li>
 			<li class="nav-item">
