fixed new tournament count

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
 			<li class="nav-item">
 				<a href="/#/tournaments" class="hidden-xs hidden-sm">
                     Tournaments
-                    <span class="count">{{newTournamentCount}}</span>
+                    <span ng-show="newTournamentCount > 0" class="count">{{newTournamentCount}}</span>
                 </a>
 				<a href="/#/tournaments" class="visible-xs visible-sm" data-toggle="collapse" data-target=".navbar-collapse">Tournament</a>
 			</li>
