added password change function to profile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,9 @@ h1,h2,h3,h4,h5,h6 {
 	text-transform: uppercase;
 	font-weight: 700;
 }
+button {
+    border-radius: 2px !important;
+}
 
 select {
     height:auto !important;
