--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -38,7 +38,7 @@
 	, confirm_password = document.getElementById("confirm_password");
 
 	function validatePassword(){
-		if(password.value != confirm_password.value) {
+		if(password.value !== confirm_password.value) {
 			confirm_password.setCustomValidity("Passwords Don't Match");
 		} else {
 			confirm_password.setCustomValidity('');
