added paid button to finances

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,6 +132,10 @@ hr.star-user:after {
 	color: black;
 }
 
+.pointer {
+    cursor: pointer;
+}
+
 #tournament-info {
 	text-align: center;
 	background: #FFF;
