--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -292,50 +292,51 @@ hr.star-user:after {
 	-ms-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
 }
-/*++++++++++++++++++++++++++*/
-/*+++BOOTSTRAP NAVBAR+++++++*/
-/*++++++++++++++++++++++++++*/
+
+/*+++++++++++++++++++++++++++++*/
+/*++++++BOOTSTRAP NAVBAR+++++++*/
+/*+++++++++++++++++++++++++++++*/
 
 .navbar-nav li a, span {
     line-height: 30px;
 }
 
-@media (max-width: 991px) {
-	.navbar-header {
-		float: none;
-	}
-	.navbar-left,.navbar-right {
-		float: none !important;
-	}
-	.navbar-toggle {
-		display: block;
-	}
-	.navbar-collapse {
-		border-top: 1px solid transparent;
-		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-	}
-	.navbar-fixed-top {
-		top: 0;
-		border-width: 0 0 1px;
-	}
-	.navbar-collapse.collapse {
-		display: none!important;
-	}
-	.navbar-nav {
-		float: none!important;
-		margin-top: 7.5px;
-	}
-	.navbar-nav>li {
-		float: none;
-	}
-	.navbar-nav>li>a {
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	.collapse.in{
-		display:block !important;
-	}
-}
+/*@media (max-width: 991px) {*/
+	/*.navbar-header {*/
+		/*float: none;*/
+	/*}*/
+	/*.navbar-left,.navbar-right {*/
+		/*float: none !important;*/
+	/*}*/
+	/*.navbar-toggle {*/
+		/*display: block;*/
+	/*}*/
+	/*.navbar-collapse {*/
+		/*border-top: 1px solid transparent;*/
+		/*box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);*/
+	/*}*/
+	/*.navbar-fixed-top {*/
+		/*top: 0;*/
+		/*border-width: 0 0 1px;*/
+	/*}*/
+	/*.navbar-collapse.collapse {*/
+		/*display: none!important;*/
+	/*}*/
+	/*.navbar-nav {*/
+		/*float: none!important;*/
+		/*margin-top: 7.5px;*/
+	/*}*/
+	/*.navbar-nav>li {*/
+		/*float: none;*/
+	/*}*/
+	/*.navbar-nav>li>a {*/
+		/*padding-top: 10px;*/
+		/*padding-bottom: 10px;*/
+	/*}*/
+	/*.collapse.in{*/
+		/*display:block !important;*/
+	/*}*/
+/*}*/
 
 /*.navbar-toggler {*/
 	/*height: 35px;*/
