fixed footer login and signup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,19 +130,27 @@
 
 <!-- LINK TO BUG REPORT PAGE -->
 <footer class="footer">
-	<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 hidden-xs hidden-sm">
-		<div>
+    <div class="row">
+        <div class="col hidden-sm-down">
             © Berlin Debating Union e.V., 2017
         </div>
-	</div>
-	<div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">
-		<a href="/#/bugReport">Report a Problem</a>
-	</div>
-	<div class="col-xs-12 col-sm-9 col-md-4 col-lg-4 photo-credit">
-        <span>
+        <div class="col">
+            <a href="/#/bugReport">Report a Problem</a>
+        </div>
+        <div class="col photo-credit">
             photo credit: <a href="https://www.flickr.com/photos/jaehyunlee/">Jaehyun Lee</a>, <a href="https://www.flickr.com/photos/jaehyunlee/33543411320/">"Museum Island"</a> is licensed under <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
-        </span>
+        </div>
     </div>
+	<!--<div class="col hidden-sm-down">-->
+		<!--<div>-->
+            <!--© Berlin Debating Union e.V., 2017-->
+        <!--</div>-->
+	<!--</div>-->
+	<!--<div class="col">-->
+		<!--<a href="/#/bugReport">Report a Problem</a>-->
+	<!--</div>-->
+	<!--<div class="col photo-credit">-->
+    <!--</div>-->
 </footer>
 
 <!-- SNACKBARS -->
