--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -136,17 +136,6 @@ hr.star-user:after {
     cursor: pointer;
 }
 
-.photo-credit {
-    font-size: x-small;
-}
-@media screen and (max-width: 500px) {
-    .photo-credit {
-        line-height:15px;
-        font-size: xx-small;
-    }
-}
-.photo-credit
-
 #tournament-info {
 	text-align: center;
 	background: #FFF;
@@ -177,11 +166,6 @@ hr.star-user:after {
     padding-left: 5px;
     padding-right: 5px;
     border-radius: 3px;
-}
-
-.nav-img {
-	height: 50px;
-	padding-left: 50px;
 }
 
 .bottom-content {
@@ -301,59 +285,19 @@ hr.star-user:after {
     line-height: 30px;
 }
 
-/*@media (max-width: 991px) {*/
-	/*.navbar-header {*/
-		/*float: none;*/
-	/*}*/
-	/*.navbar-left,.navbar-right {*/
-		/*float: none !important;*/
-	/*}*/
-	/*.navbar-toggle {*/
-		/*display: block;*/
-	/*}*/
-	/*.navbar-collapse {*/
-		/*border-top: 1px solid transparent;*/
-		/*box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);*/
-	/*}*/
-	/*.navbar-fixed-top {*/
-		/*top: 0;*/
-		/*border-width: 0 0 1px;*/
-	/*}*/
-	/*.navbar-collapse.collapse {*/
-		/*display: none!important;*/
-	/*}*/
-	/*.navbar-nav {*/
-		/*float: none!important;*/
-		/*margin-top: 7.5px;*/
-	/*}*/
-	/*.navbar-nav>li {*/
-		/*float: none;*/
-	/*}*/
-	/*.navbar-nav>li>a {*/
-		/*padding-top: 10px;*/
-		/*padding-bottom: 10px;*/
-	/*}*/
-	/*.collapse.in{*/
-		/*display:block !important;*/
-	/*}*/
-/*}*/
-
-/*.navbar-toggler {*/
-	/*height: 35px;*/
-	/*width: 42px;*/
-	/*margin-top: 3px;*/
-/*}*/
-
 .nav-image {
-	/*margin-top: 9px;*/
 	height: 40px;
 	width: 40px;
 	border:0.1px solid gainsboro;
 	border-radius: 50%;
 }
 
+.nav-img {
+    height: 50px;
+    padding-left: 50px;
+}
+
 .nav-logo {
-	/*margin-top: 9px;*/
 	height: 40px;
 	width: 90px;
 }
@@ -634,6 +578,17 @@ html, body {
     margin: 0;
 }
 
+.photo-credit {
+    font-size: x-small;
+}
+@media screen and (max-width: 500px) {
+    .photo-credit {
+        margin-top: 5px;
+        line-height:15px;
+        font-size: xx-small;
+    }
+}
+
 .content {
     min-height: 100%;
     margin: 0 auto -50px;
@@ -648,12 +603,6 @@ footer {
     margin-top: 30px;
     height: 40px;
     font-size: small;
-}
-
-@media screen and (max-width: 700px) {
-    footer {
-        height: 80px;
-    }
 }
 
 /*CONDITIONAL MONETARY STYLING*/
