--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>BDUDB</title>
-	
-	<!-- load javascripts -->
+    <title>BDUDB</title>
 
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <!-- load javascripts -->
 
-	<!-- angular -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.min.js"></script>
+    <!-- angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.min.js"></script>
 
-	<!-- bootstrap -->
-	<script src="/bootstrap/js/bootstrap.min.js"></script>
-
-	<script src="/javascripts/angularPasswordReset.js"></script>
+    <script src="/javascripts/angularPasswordReset.js"></script>
 
 
-	<!-- load stylesheets -->
+    <!-- load stylesheets -->
 
-	<!-- bootstrap -->
-	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-	
-	<!-- load fontawesome -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href="/stylesheets/style.css">
-	<link href="/timepicker/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="/stylesheets/style.css">
 
 </head>
 <script type="text/javascript">
 	var password = document.getElementById("password")
-	, confirm_password = document.getElementById("confirm_password");
+		, confirm_password = document.getElementById("confirm_password");
 
 	function validatePassword(){
 		if(password.value !== confirm_password.value) {
@@ -49,117 +45,49 @@
 	confirm_password.onkeyup = validatePassword;
 </script>
 <body>
-<nav class="navbar navbar-inverse bg-inverse navbar-fixed-top navbar-toggleable-md bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#/profile">
-        <img class="nav-logo" ng-src="http://debating.de/BDUDBdev/bdu_white_logo.png" onerror="this.src='images/bdu_quad.png'" alt=""/>
-    </a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a href="/#/profile" class="nav-link hidden-sm-down">Profile</a>
-                <a href="/#/profile" class="nav-link hidden-md-up" data-toggle="collapse" data-target=".navbar-collapse">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a href="/#/tournaments" class="nav-link hidden-sm-down">
-                    Tournaments
-                    <span ng-show="newTournamentCount > 0" class="count">{{newTournamentCount}}</span>
-                </a>
-                <a href="/#/tournaments" class="nav-link hidden-md-up" data-toggle="collapse" data-target=".navbar-collapse">Tournament</a>
-            </li>
-            <li class="nav-item">
-                <a href="/#/anmeldungen" class="nav-link hidden-sm-down">Reg Overview</a>
-                <a href="/#/anmeldungen" class="nav-link hidden-md-up" data-toggle="collapse" data-target=".navbar-collapse">Reg Overview</a>
-            </li>
-            <li ng-show="istVorstand" class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Vorstand
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item hidden-sm-down" href="/#/vorstand">Create Tournament</a>
-                    <a class="dropdown-item hidden-md-up" href="/#/vorstand" data-toggle="collapse" data-target=".navbar-collapse">Create Tournament</a>
-                    <a class="dropdown-item hidden-sm-down" href="/#/finances">Finances</a>
-                    <a class="dropdown-item hidden-md-up" href="/#/finances" data-toggle="collapse" data-target=".navbar-collapse">Finances</a>
+
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-text">
+                    <span class="name"><i class="fa fa-retweet" aria-hidden="true"></i> Reset Password</span>
                 </div>
-            </li>
-        </ul>
-
-        <ul class="navbar-nav my-2 my-lg-0" ng-show="authenticated">
-            <li class="nav-item">
-                <a href="/#/profile" class="hidden-md-down nav-link navbar-brand">
-                    <img class="nav-image" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
-                </a>
-            </li>
-            <li class="nav-item hidden-sm-down">
-                <span class="navbar-text" style="margin-right: 15px">Signed in as {{user.vorname}}</span>
-            </li>
-            <li class="nav-item">
-                <!--SCHULDEN-->
-                <span class="help-tip hidden-md-down" style="margin-right: 15px">
-                    <span class="navbar-text currencySign" data-monetary-amount="{{personnelDebt | currency:'€'}}"></span>
-					<p class="navbar-text">This is how much you currently owe the BDU.</p>
-				</span>
-            </li>
-
-            <li class="nav-item">
-                <a href="/#/" class="hidden-sm-down nav-link" ng-click="signout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
-                <a href="/#/" class="hidden-md-up visible-sm nav-link" data-toggle="collapse" data-target=".navbar-collapse" ng-click="signout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
-            </li>
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right" ng-show="!authenticated">
-            <li><a href="/#/" class="hidden-sm-down nav-link"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
-            <li><a href="/#/" class="hidden-md-up nav-link" data-toggle="collapse" data-target=".navbar-collapse"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
-            <li><a href="/#/signup" class="hidden-sm-down nav-link"><i class="fa fa-user-circle" aria-hidden="true"></i> Signup</a></li>
-            <li><a href="/#/signup" class="hidden-md-up nav-link" data-toggle="collapse" data-target=".navbar-collapse"><i class="fa fa-user-circle" aria-hidden="true"></i> Signup</a></li>
-        </ul>
+            </div>
+        </div>
     </div>
-</nav>
+</header>
 
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="intro-text">
-						<span class="name"><i class="fa fa-retweet" aria-hidden="true"></i> Reset Password</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+<div class="container">
+    <div class="col-md-6 offset-md-3">
 
-	<div class="col-sm-6 col-sm-offset-3">
+        <h2><%= message %></h2>
+        <% if(user != null) { %>
+        <!-- SIGNUP FORM -->
+        <form action="/reset" method="post">
+            <fieldset>
+                <div class="form-group">
+                    <label>New Password</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
+                        <input type="password" ng-model="password" placeholder="Enter your password" class="form-control" name="password" id="password1" required="true">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Confirm password</label>
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
+                        <input type="password" placeholder="Confirm your password" class="form-control" name="password-confirm" id="password2" required="true">
+                    </div>
+                </div>
+                <input type="hidden" class="hidden" name="id" value="<%= user.get('id') %>">
+                <button type="submit" class="btn btn-outline-warning btn-lg pull-right">Set New Password</button>
 
-		<h2><%= message %></h2>
-		<% if(user != null) { %>
-			<!-- SIGNUP FORM -->
-		<form action="/reset" method="post">
-			<fieldset>
-				<div class="form-group">
-					<label>New Password</label>
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
-						<input type="password" ng-model="password" placeholder="Enter your password" class="form-control" name="password" id="password1" required="true">
-					</div>
-				</div>
-				<div class="form-group">
-					<label>Confirm password</label>
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
-						<input type="password" placeholder="Confirm your password" class="form-control" name="password-confirm" id="password2" required="true">
-					</div>
-				</div>
-				<input type="hidden" class="hidden" name="id" value="<%= user.get('id') %>">
-				<button type="submit" class="btn btn-warning btn-lg">Set New Password</button>
-
-			</fieldset>
-		</form>
-		<% }%>
-
-		
-	</div>
+            </fieldset>
+        </form>
+        <% }%>
+    </div>
+</div>
 
 </body>
 </html>
