--- a/views/index.ejs
+++ b/views/index.ejs
@@ -135,19 +135,9 @@
             <a href="/#/bugReport">Report a Problem</a>
         </div>
         <div class="col photo-credit">
-            photo credit: <a href="https://www.flickr.com/photos/jaehyunlee/">Jaehyun Lee</a>, <a href="https://www.flickr.com/photos/jaehyunlee/33543411320/">"Museum Island"</a> is licensed under <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
+            photo credit: <a target="_blank" href="https://www.flickr.com/photos/jaehyunlee/">Jaehyun Lee</a>, <a target="_blank" href="https://www.flickr.com/photos/jaehyunlee/33543411320/">"Museum Island"</a> is licensed under <a target="_blank" href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
         </div>
     </div>
-	<!--<div class="col hidden-sm-down">-->
-		<!--<div>-->
-            <!--© Berlin Debating Union e.V., 2017-->
-        <!--</div>-->
-	<!--</div>-->
-	<!--<div class="col">-->
-		<!--<a href="/#/bugReport">Report a Problem</a>-->
-	<!--</div>-->
-	<!--<div class="col photo-credit">-->
-    <!--</div>-->
 </footer>
 
 <!-- SNACKBARS -->
