--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -198,20 +198,36 @@ textarea {
 	margin: 0 auto;
 	border:4px solid gainsboro;
 	border-radius: 50%;
+    text-align: center;
 }
 
-.image-cropper2 {
-	position: relative;
-	overflow: hidden;
-	width: 20px;
-	height: 20px;
-	margin: 0 auto;
-	border:4px solid gainsboro;
-	border-radius: 50%;
+.image-cropper:hover {
+    background-color: black;
+
 }
 
-.image-cropper label{
+.image-cropper p {
+    visibility: hidden;
 }
+
+.image-cropper img:hover {
+    background-color: black;
+    opacity: 0.2;
+}
+
+.image-cropper a {
+    color: white;
+    text-decoration: none;
+}
+
+.image-cropper p {
+    margin-top: 100px;
+}
+
+.image-cropper:hover p {
+    visibility: visible;
+}
+
 
 .image-cropper .img-hor {
 	position: absolute;
