refactored new tournament count

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
             <li class="nav-item" ng-show="authenticated">
                 <a href="/#/tournaments" class="nav-link hidden-sm-down">
                     Tournaments
-                    <span ng-show="newTournamentCount > 0" class="count">{{newTournamentCount}}</span>
+                    <span ng-show="user.new_tournament_count > 0" class="count">{{user.new_tournament_count}}</span>
                 </a>
                 <a href="/#/tournaments" class="nav-link hidden-md-up" data-toggle="collapse" data-target=".navbar-collapse">Tournaments</a>
             </li>
