removed http from insecure content

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -63,7 +63,7 @@
         <ul class="navbar-nav my-2 my-lg-0" ng-show="authenticated">
             <li class="nav-item">
                 <a href="/#/profile" class="hidden-md-down nav-link navbar-brand">
-                    <img class="nav-image" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+                    <img class="nav-image" ng-src="//debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
                 </a>
             </li>
             <li class="nav-item hidden-sm-down">
