--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,52 +1,55 @@
 <!doctype html>
 <html ng-app="bduApp">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>BDU Members Area</title>
+    <title>BDU Members Area</title>
 
-	<!-- load javascripts -->
+    <!-- load javascripts -->
 
-	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 
-	<!-- lodash -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <!-- lodash -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 
-	<!-- tether.io -->
-	<script src="https://cdn.rawgit.com/HubSpot/tether/v1.3.4/dist/js/tether.min.js"></script>
+    <!-- tether.io -->
+    <script src="https://cdn.rawgit.com/HubSpot/tether/v1.3.4/dist/js/tether.min.js"></script>
 
-	<!-- angular -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-resource.min.js"></script>
+    <!-- angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-resource.min.js"></script>
 
-	<!-- ngDialog -->
-	<script src="/javascripts/ng-dialog/js/ngDialog.js"></script>
-	<link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog.min.css">
-	<link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog-theme-default.min.css">
+    <!-- ngDialog -->
+    <script src="/javascripts/ng-dialog/js/ngDialog.js"></script>
+    <link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog.min.css">
+    <link rel="stylesheet" href="/javascripts/ng-dialog/css/ngDialog-theme-default.min.css">
 
-	<!-- ng-file-upload -->
-	<script src="/javascripts/ng-file-upload/ng-file-upload-shim.min.js"></script>
-	<script src="/javascripts/ng-file-upload/ng-file-upload.min.js"></script>
+    <!-- ng-file-upload -->
+    <script src="/javascripts/ng-file-upload/ng-file-upload-shim.min.js"></script>
+    <script src="/javascripts/ng-file-upload/ng-file-upload.min.js"></script>
 
-	<!-- ng-img-crop -->
-	<script src="/javascripts/ng-img-crop/js/ng-img-crop.js"></script>
+    <!-- ng-img-crop -->
+    <script src="/javascripts/ng-img-crop/js/ng-img-crop.js"></script>
 
-	<!-- bootstrap -->
+    <!-- bootstrap -->
     <link rel="stylesheet" href="/stylesheets/bootstrap/4.0.0-alpha.6/css/bootstrap.css" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
-	<!-- fontawesome -->
+    <!-- fontawesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<!--OWN FILES-->
-	<script src="/javascripts/bduApp.js"></script>
+    <!--css-loader-->
+    <link rel="stylesheet" href="/stylesheets/loader.css" />
 
-	<link rel="stylesheet" href="/stylesheets/style.css">
-	<link rel="stylesheet" href="/stylesheets/inline_help_style.css">
+    <!--OWN FILES-->
+    <script src="/javascripts/bduApp.js"></script>
+
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/inline_help_style.css">
 
 </head>
 <body>
@@ -101,7 +104,7 @@
             </li>
             <li class="nav-item">
                 <!--SCHULDEN-->
-				<span class="help-tip hidden-md-down" style="margin-right: 15px">
+                <span class="help-tip hidden-md-down" style="margin-right: 15px">
                     <span class="navbar-text currencySign" data-monetary-amount="{{personnelDebt | currency:'€'}}"></span>
 					<p class="navbar-text">This is how much you currently owe the BDU.</p>
 				</span>
@@ -144,6 +147,16 @@
 
 <strong id="snackbarSuccess" class="alert alert-success"></strong>
 <strong id="snackbarError" class="alert alert-danger"></strong>
+
+<!--LOADER-->
+<div ng-class="{'overlay': loader}"></div>
+<div ng-show="loader" class="showbox">
+    <div class="loader">
+        <svg class="circular" viewBox="25 25 50 50">
+            <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+        </svg>
+    </div>
+</div>
 
 
 </body>
