--- a/public/stylesheets/loader.css
+++ b/public/stylesheets/loader.css
@@ -10,19 +10,19 @@
 }
 
 .showbox {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 30%;
+    padding: 20%;
     z-index: 99;
 }
 
 .loader {
     position: relative;
     margin: 0 auto;
-    width: 100px;
+    width: 250px;
 }
 .loader:before {
     content: '';
