refactored setSuccess Services and added option to edit success as Vorstand in finance view

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,8 @@
 
     <!--OWN FILES-->
     <script src="/javascripts/bduApp.js"></script>
+    <script src="/javascripts/resourceFactories.js"></script>
+    <script src="/javascripts/successService.js"></script>
 
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/inline_help_style.css">
