--- a/public/templates/successDisplayTemplate.html
+++ b/public/templates/successDisplayTemplate.html
@@ -1,3 +1,7 @@
 <!--TEMPLATE FOR INLINE DISPLAY SUCCESS VIEW-->
-<i ng-hide="tournament.pivot_attended != 1" ng-click="editSuccess(tournament)" class="text-danger fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>
+<i ng-hide="tournament.pivot_attended != 1 || (tournament.pivot_role == 'judge' && !istVorstand)"
+   ng-click="editSuccess(tournament)"
+   class="text-danger fa fa-pencil-square-o fa-lg"
+   aria-hidden="true">
+</i>
 <p>{{tournament.pivot_success}}</p>
