--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,9 @@
     <!--css-loader-->
     <link rel="stylesheet" href="/stylesheets/loader.css" />
 
+    <!--moment js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+
     <!--OWN FILES-->
     <script src="/javascripts/bduApp.js"></script>
     <script src="/javascripts/resourceFactories.js"></script>
