changed landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,7 @@
 
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/inline_help_style.css">
+    <link rel="stylesheet" href="/stylesheets/landing.css">
 
 </head>
 <body>
