--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -26,13 +26,28 @@
     }
 }
 
-.landing .title {
-    text-align: center;
-    padding: 0 0 40px 0;
+
+
+@media (max-width: 720px) {
+    .landing .title {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .landing .title img {
+        width: 75%;
+    }
 }
 
-.landing .title img {
-    width: 30%;
+@media (min-width: 721px) {
+    .landing .title {
+        text-align: center;
+        padding: 0 0 40px 0;
+    }
+
+    .landing .title img {
+        width: 30%;
+    }
 }
 
 .landing .login {
