added last mail info members overview

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,8 +93,8 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item hidden-sm-down" href="/#/vorstand">Create Tournament</a>
                     <a class="dropdown-item hidden-md-up" href="/#/vorstand" data-toggle="collapse" data-target=".navbar-collapse">Create Tournament</a>
-                    <a class="dropdown-item hidden-sm-down" href="/#/finances">Finances</a>
-                    <a class="dropdown-item hidden-md-up" href="/#/finances" data-toggle="collapse" data-target=".navbar-collapse">Finances</a>
+                    <a class="dropdown-item hidden-sm-down" href="/#/finances">Club Members</a>
+                    <a class="dropdown-item hidden-md-up" href="/#/finances" data-toggle="collapse" data-target=".navbar-collapse">Club Members</a>
                 </div>
             </li>
         </ul>
