fixed UI bug in tournaments view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -269,12 +269,13 @@ textarea {
     border-radius: 1%;
 }
 
-.details th {
+#details th {
     min-width: 135px;
 }
-.details td {
+#details td {
     text-align: right;
 }
+
 .left-align td, th {
     text-align: left;
 }
