--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -263,7 +263,7 @@ textarea {
 
 .wellpadding {
     padding-top: 35px;
-    border:0px;
+    border:0;
     border-color: #74907C;
     border-style: solid;
     border-radius: 1%;
