--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,10 +48,16 @@
     <!--moment js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
+    <!--highcharts-->
+    <script src="https://code.highcharts.com/highcharts.src.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="/javascripts/highcharts/themes/dark_unica.js"></script>
+
     <!--OWN FILES-->
     <script src="/javascripts/bduApp.js"></script>
     <script src="/javascripts/resourceFactories.js"></script>
     <script src="/javascripts/successService.js"></script>
+    <script src="/javascripts/controllers/rankingCtrl.js"></script>
 
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/inline_help_style.css">
