--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,8 @@
     <!--css-loader-->
     <link rel="stylesheet" href="/stylesheets/loader.css" />
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500" rel="stylesheet">
+
     <!--moment js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
@@ -101,6 +103,8 @@
                     <a class="dropdown-item hidden-md-up" href="/#/vorstand" data-toggle="collapse" data-target=".navbar-collapse">Create Tournament</a>
                     <a class="dropdown-item hidden-sm-down" href="/#/finances">Club Members</a>
                     <a class="dropdown-item hidden-md-up" href="/#/finances" data-toggle="collapse" data-target=".navbar-collapse">Club Members</a>
+                    <a class="dropdown-item hidden-sm-down" href="/#/ranking">Ranking</a>
+                    <a class="dropdown-item hidden-md-up" href="/#/ranking" data-toggle="collapse" data-target=".navbar-collapse">Ranking</a>
                 </div>
             </li>
         </ul>
