--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 
     <!--highcharts-->
-    <script type="text/javascript" src="http://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/highcharts.src.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="/javascripts/highcharts/themes/dark_unica.js"></script>
 
