removed viewing restrictions on ranking chart html page

--- a/public/views/ranking.html
+++ b/public/views/ranking.html
@@ -10,26 +10,9 @@
 	</div>
 </header>
 
-<!-- SHOWN ONLY TO PEOPLE WITHOUT PROPPER RIGHTS -->
-<section id="user-info" ng-hide="istVorstand">
-	<div class="container">
-		<div class="row">
-			<!-- Table -->
-			<div class="col-sm-8 col-sm-offset-2">
-				<div class="user-info-table">
+<section>
 
-					<h3>
-						Sorry you don't have the right to see this.
-					</h3>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section ng-show='istVorstand'>
-
-	<!-- NEW TOURNAMENT -->
+	<!-- Ranking Chart -->
 	<div class="container">
 		<div class="clearfix">
 
