started building a dashboard

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,10 +64,12 @@
     <script src="/javascripts/resourceFactories.js"></script>
     <script src="/javascripts/successService.js"></script>
     <script src="/javascripts/controllers/rankingCtrl.js"></script>
+    <script src="/javascripts/controllers/dashboardCtrl.js"></script>
 
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="/stylesheets/inline_help_style.css">
-    <link rel="stylesheet" href="/stylesheets/landing.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/inline_help_style.css">
+    <link rel="stylesheet" href="stylesheets/landing.css">
+    <link rel="stylesheet" href="stylesheets/dashboard.css">
 
 </head>
 <body>
